test/spec_vectors/i32/fail/module_29.wat
(module (func $type-binary-1st-operand-empty-in-br (i32.const 0) (i32.const 0) (block (br 0 (i32.add)) (drop))))